# opencv_android_setup_tutorial

./: .gitignore  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ir/whiteapp/maremat/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: libdetection_based_tracker.cpp  libdetection_based_tracker.h  native-lib.cpp  native-lib.h
app/src/main/java/ir/whiteapp/maremat/: DetectionBasedTracker.java  FdActivity.java  Inpainting.java  Main2Activity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ir/whiteapp/maremat/: ExampleUnitTest.java
openCVLibrary320/: build.gradle
